examples/negative/modules/duplicate_type_decl.kai
# Negative fixture (#520 / modules): the same `type` name is
# declared twice in the same module. The resolver must reject
# with "already declared" naming the earlier site. This is
# the duplicate-decl shape that was silent for nominal `type`
# in #518 and got fixed; we lock the contract with a fixture.

type Box = Box(Int)
type Box = Box(String)

fn main() : Int = 0
